crates/query-engine/formatters/tests/snapshots/goon_snapshots__snapshot_pagination.snap
---
source: crates/query-engine/formatters/tests/goon_snapshots.rs
expression: run(r)
---
@header
query_type:traversal
goon_version:1.0.0
nodes:1
edges:0
has_more:true
truncated:true
next_cursor:"cursor-1"
total_rows:100
@nodes
MR(1):
1 iid=42
@edges
